@@ -14,6 +14,14 @@ http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).
 Eventually this branch will be merged with the development on the
 trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.
 
+7/27/2001: mkoeppe
+	   * stype.c (SwigType_default): Strip qualifiers first. The
+	     default type of "int * const" is now "SWIGPOINTER *".
+	   * main.cxx: Define "__cplusplus" in SWIG's preprocessor if
+	     in C++ mode.
+	   * [Guile]: Added some support for arrays and C++
+	     references, fixing the "constant_pointers" test case.
+
 7/26/2001: cheetah (william fulton)
 	   * Test-suite added.
 	   * Initial testcases: constant_pointers cpp_enum defines
